test-expected/large/fooenvironmentmanager/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: envmgr-app
    foo.com/duversion: 3.3.150-20190924.1569381612463
    foo.com/version: 3.3.150
  labels:
    app.kubernetes.io/name: fooenvironmentmanager
    helm.sh/chart: fooenvironmentmanager-3.3.150
  name: fooenvironmentmanager
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /FOOEnvironmentManager
    - uri:
        prefix: /FOOEnvironmentManager/
    route:
    - destination:
        host: fooenvironmentmanager.peekay.svc.cluster.local
